--- a/gear5-ex-2/styles/navbar.css
+++ b/gear5-ex-2/styles/navbar.css
@@ -110,7 +110,8 @@
 }
 
 .profile img{
-    width: 55px;
+    width: 50px;
+    border: 2px solid rgb(255, 255, 255);
     border-radius: 50%;
     margin-left: 10px;
 
